# json_presenter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: render_card.py  render_showcase.py  render_table.py  render_tree.py
examples/data/: api_response.json  book.json  company.json  country.json  github_repo.json  nested.json  people.json  person.json  weather.json
examples/output/: api_response_cards.html  book_cards.html  card_winter.html  company_cards.html  country_cards.html  github_repo_cards.html  nested-cards.html  nested-winter.html  people-cards.html  person_cards.html  table_minimal.html  test_release.html  tree_dark.html  weather_cards.html
src/json_presenter/: __init__.py  exceptions.py  presenter.py
src/json_presenter/analyzer/: __init__.py  structure_analyzer.py
src/json_presenter/enums/: __init__.py  theme_type.py  view_type.py
src/json_presenter/formatting/: __init__.py  labels.py  values.py
src/json_presenter/models/: __init__.py  analysis.py  recommendation.py  rendered.py
src/json_presenter/presentation/: __init__.py  card_fields.py  document.py  nodes.py
src/json_presenter/presenters/: __init__.py  base.py  card_presenter.py  table_presenter.py  tree_presenter.py
src/json_presenter/recommenders/: __init__.py  recommender.py
src/json_presenter/rendering/: __init__.py  engine.py  html_renderer.py  presenter_registry.py  theme_registry.py
src/json_presenter/themes/: base.py  (+9 more)
tests/: test_analyzer.py  test_enums.py  test_exceptions.py  test_formatting.py  test_html_renderer.py  test_loading.py  test_presentation_model.py  test_presenters.py  test_recommender.py  test_render_engine.py  test_rendered_presentation.py  test_rendering_registries.py  test_themes.py
tests/data/: sample.json
(+5 files in other folders)
