[project]
name = "json_presenter"
version = "0.1.0"
description = "Transform JSON into meaningful, beautiful, downloadable presentation views."
readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Zun Khet Wai" }
]

requires-python = ">=3.10"

keywords = [
    "json",
    "html",
    "visualization",
    "presentation",
    "renderer"
]