[project]
name = "json_presenter"
version = "0.1.0"
description = "Transform JSON into meaningful, beautiful, downloadable presentation views."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "Zun Khet Wai" }
]

keywords = [
    "json",
    "html",
    "presentation",
    "visualization",
    "renderer"
]

[project.urls]
Homepage = "https://github.com/ZunKhet/json_presenter"
Repository = "https://github.com/ZunKhet/json_presenter"
Issues = "https://github.com/ZunKhet/json_presenter/issues"